<resources>
    <string name="app_name">TipTime</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="gold_18">Gold (18%)</string>
    <string name="gold">Gold (18%)</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="how_whas_the_service">how whas the service?</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="okay_15">Okay (15%)</string>
</resources>