<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:id="@+id/cost_of_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"
            android:layout_width="160dp"
            android:hint="@string/cost_of_service"
            android:inputType="numberDecimal"/>

    <TextView
            android:id="@+id/service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cost_of_service"
            android:text="@string/how_whas_the_service"/>

    <RadioGroup
            android:id="@+id/tip_options"
            android:checkedButton="@id/options_twenty_percent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <RadioButton
                android:id="@+id/options_twenty_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing_20"/>

        <RadioButton
                android:id="@+id/options_eighteen_percet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gold"/>

        <RadioButton
                android:id="@+id/options_fifteen_percet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/okay_15"/>

    </RadioGroup>

    <Switch
            android:id="@+id/round_up_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Round up tip?"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tip_options"
            app:layout_constraintTop_toBottomOf="@id/tip_options" tools:ignore="UseSwitchCompatOrMaterialXml"/>

    <Button
            android:id="@+id/calculate_button"
            android:text="@string/calculate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/round_up_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tip_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Tip Amount: $10"
            app:layout_constraintTop_toBottomOf="@id/calculate_button"
            />


</androidx.constraintlayout.widget.ConstraintLayout>